--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   db:
-    image: postgres:16.3-alpine3.20
+    image: postgres:16.3
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: bookify_db
+      POSTGRES_DB: database
     ports:
       - "5433:5432"
     volumes:
