--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@tabler/icons-react": "^3.29.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.0.1",
+    "framer-motion": "^12.0.5",
     "lucide-react": "^0.473.0",
     "motion": "^12.0.1",
     "next": "15.1.6",
