--- a/WebApiTemplate.csproj
+++ b/WebApiTemplate.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="AssemblyAI" Version="1.2.0" />
+        <PackageReference Include="dotenv.net" Version="3.2.1" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.12" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.12">
