--- a/WebApiTemplate.csproj
+++ b/WebApiTemplate.csproj
@@ -18,6 +18,7 @@
         </PackageReference>
         <PackageReference Include="Npgsql" Version="8.0.6" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+        <PackageReference Include="PdfPig" Version="0.1.9" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     </ItemGroup>
 
